<resources>
    <string name="app_name">Kolibri WMS</string>
    <string name="activity_intent_filter_action">com.microbs.ACTION</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
    <string name="change_theme">Izaberi tamnu temu</string>
    <string name="login">Logovanje</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Šifra</string>
    <string name="attention">PAŽNJA</string>
    <string name="error">GREŠKA</string>
    <string name="warning">UPOZORENJE</string>
    <string name="error_string">GREŠKA:\n%1$s</string>
    <string name="system_error">SISTEMSKA GREŠKA</string>
    <string name="system_error_happened">Desila se sistemska greška, bicete odjavljeni sa sistema. Da li želite da pošaljete email administratoru sa greškom?!</string>
    <string name="send_error">Da li želite da pošaljete email administratoru sa greškama?!</string>
    <string name="no_internet_msg">Nemate internet konekciju. Ne možete nastaviti sa radom bez internet konekcije!</string>
    <string name="please_wait">Molimo sačekajte...</string>
    <string name="error_message">Niste uneli dobre vrednosti</string>
    <string name="login_lbl">PRIJAVA</string>
    <string name="login_error">Greška prilikom prijave!</string>
    <string name="data_sync">Sinhronizacija podataka...</string>
    <string name="error_login_try_again">Neuspešna prijava, pokušajte ponovo!</string>
    <string name="no_licence_error">Uredjaj nije licenciran!</string>
    <string name="check_internet">Proverite internet konekciju!</string>
    <string name="successString">Preuzeti podaci!!!</string>
    <string name="error_happened">Došlo je do greške!!!</string>
    <string name="error_happened_main">Upozorenje!!!</string>
    <string name="no_device_no">Serijski broj uređaja ne postoji. Ne možete nastaviti sa radom. Kontaktirajte administratora.</string>
    <string name="server_communication_error">"Greška pri komunikaciji sa serverom. GREŠKA:\n%1$s"</string>
    <string name="error_login">Došlo je do greške pri loginu. Pokušajte ponovo!</string>
    <string name="error_employee_insert">Greška pruloilikom inserta zaposlenog u lokalnu bazu. Pokušajte ponovo!</string>
    <string name="error_getting_emp_from_fb">Greška pri dobijanju zaposlenog sa Firebase-a. Pokušakte ponovo!</string>
    <string name="already_logged_another_device">Već ste ulogovani na drugom uredjaju!</string>
    <string name="firebase_emp_parse_error">Greška pri parsiranju objekta zaposlenog. Pokušajte ponovo!</string>
    <string name="firebase_emp_insert_error">Greška pri insertu zaposlegon na Firebase. Pokušajte ponovo!</string>
    <string name="sync_started">Započeta sinhronizacija...</string>
    <string name="sync_error_app_version">Došlo je do greške pri sinhronizaciji verzije aplikacije</string>
    <string name="sync_error_ramp">Došlo je do greške pri sinhronizaciji rampi</string>
    <string name="sync_error_product_category">Došlo je do greške pri sinhronizaciji grupa proizvoda</string>
    <string name="sync_error_product">Došlo je do greške pri sinhronizaciji proizvoda</string>
    <string name="sync_error_truck">Došlo je do greške pri sinhronizaciji kamiona</string>
    <string name="sync_error_product_box">Došlo je do greške pri sinhronizaciji kutija proizvoda</string>
    <string name="sync_error_product_item">Došlo je do greške pri sinhronizaciji tipova proizvoda</string>
    <string name="sync_error_return_reason">Došlo je do greške pri sinhronizaciji razloga za povrat</string>
    <string name="sync_error_incoming_type">Došlo je do greške pri sinhronizaciji tipova prijema</string>
    <string name="sync_error_incoming_production_type">Došlo je do greške pri sinhronizaciji tipova prijema iz proizvodnje</string>
    <string name="sync_error_partner">Došlo je do greške pri sinhronizaciji partnera</string>
    <string name="sync_error_warehouse">Došlo je do greške pri sinhronizaciji magacina</string>
    <string name="sync_error_object">Došlo je do greške pri sinhronizaciji objekta za magacine</string>
    <string name="sync_error_w_pos">Došlo je do greške pri sinhronizaciji pozicija za magacine</string>
    <string name="sync_error_w_sub_pos">Došlo je do greške pri sinhronizaciji podpozicija za magacine</string>
    <string name="sync_error_outgoing_type">Došlo je do greške pri sinhronizaciji tipova otpreme</string>
    <string name="sync_finished">Završena Sinhronizacija</string>
    <string name="data_not_sent">Nisu poslati sledeći podaci: \n</string>
    <string name="data_not_sync">GREŠKA:\n%1$s\nNisu sinhronizovani podaci: \n</string>
    <string name="try_sync_again_prompt">\n Da li želite opet da pokušate sinhronizaciju podataka?</string>
    <string name="sync_mandatory_lbl">Greška pri sinhronizaciji! Sinhronizacija je obavezna!</string>
    <string name="new_version_warning">Na serveru postoji nova verzija aplikacije!</string>
    <string name="download_version_prompt">Preuzmi novu verziju?</string>
    <string name="all_data_not_sent">Nisu poslati svi podaci na server!</string>
    <string name="succes_login">Provera završena</string>
    <string name="incoming">PRIJEM</string>
    <string name="incoming_sub">Lista aktivnih prijema</string>
    <string name="outcoming">OTPREMA</string>
    <string name="outcoming_sub">Lista aktivnih otprema</string>
    <string name="repacking">PREPAKIVANJE</string>
    <string name="repacking_desc">Prepakivanje robe na pozicijama</string>
    <string name="logout_prompt">Da li želite da se izlogujete?</string>
    <string name="logout_success">Uspešan logout!</string>
    <string name="logout_error">Došlo je do greške pri logoutu! Proverite internet konekciju i pokušajte opet. GREŠKA:\n%1$s</string>
    <string name="inventory">POPIS</string>
    <string name="inventory_desc">Popis atikala u skladištu</string>
    <string name="large_prod_lbl">Br. veliki artikli: </string>
    <string name="small_prod_lbl">Br. mali artikli:</string>
    <string name="cancel">ODUSTANI</string>
    <string name="choose">POTVRDI</string>
    <string name="document_date">"Datum dokumenta: %1$s"</string>
    <string name="active">Aktivan</string>
    <string name="finished_partially">Završeno delimično</string>
    <string name="finished">Završeno potpuno</string>
    <string name="finished_with_surplus">Završeno sa viškom</string>
    <string name="returned">Vraćeno</string>
    <string name="sent_to_erp">Poslato u ERP</string>
    <string name="declined">Otkazano</string>
    <string name="code">Šifra: %1$s</string>
    <string name="transport_no">Transport: %1$s</string>
    <string name="type">Tip: %1$s</string>
    <string name="status">Status: %1$s</string>
    <string name="date">Datum: %1$s</string>
    <string name="partner">Partner: %1$s</string>
    <string name="address">Adresa: %1$s</string>
    <string name="warehouse">Skladište: %1$s</string>
    <string name="date_lbl">DATUM</string>
    <string name="filter">Filter</string>
    <string name="set_date_to">Odaberite datum do</string>
    <string name="no_incoming_for_period">Ne postoje prijemi za odabrane filtere.\nOdaberite drugi datum ili promenite filtere.</string>
    <string name="incoming_sync_error">Došlo je do greške pri dobavljanju prijema sa Firebase servera. Pokušajte ponovo!</string>
    <string name="incoming_type_lbl">Tip prijema</string>
    <string name="incoming_code">Šifra prijema</string>
    <string name="partner_lbl">Partner</string>
    <string name="city_lbl">Grad</string>
    <string name="current_incoming_null_error">Došlo je do greške pri očitavanju odabranog prijema. Pokušajte opet.</string>
    <string name="current_outgoing_null_error">Došlo je do greške pri očitavanju odabrane otpreme. Pokušajte opet.</string>
    <string name="incoming_code_short">"ŠIF: %1$s"</string>
    <string name="incoming_expected_date">"Očekivani datum prijema: %1$s"</string>
    <string name="partner_name_and_address">%1$s (%2$s) </string>
    <string name="scanning_error">Došlo je do greške pri skeniranju. GREŠKA:\n%1$s</string>
    <string name="selectedProducts">UKUPNO SKENIRANO ARTIKALA</string>
    <string name="selectedProductsShort">SKENIRANO ART.</string>
    <string name="small_product">IZABRANO MALIH</string>
    <string name="big_product">IZABRANO VELIKIH</string>
    <string name="btn_position">POSTAVI</string>
    <string name="position_hint">POZICIJA</string>
    <string name="no_temporary_product">TRENUTNO NEMATE NIJEDAN ARTIKAL U PRIVREMENOJ LISTI</string>
    <string name="empty_serials">NEMA DEFINISANIH SERIJSKIH BROJEVA ZA OVAJ PRIJEM</string>
    <string name="add_product">DODAJ</string>
    <string name="serial_number_hint">SERIJSKI BROJ</string>
    <string name="truck_driver">VOZAČ</string>
    <string name="licence_plate">REGISTRACIJA</string>
    <string name="add_prod_no_sr_num">Dodaj bez sr.br.</string>
    <string name="sr_number_hint">SERIJSKI BROJ</string>
    <string name="error_loading_current_outgoing_leave">Postoji greška sa trenutno odabranom otpremom. Izađite iz forme pa pokusajte ponovo.</string>
    <string name="error_loading_current_incoming_leave">Postoji greška sa trenutno odabranim prijemom. Izađite iz forme pa pokusajte ponovo.</string>
    <string name="articles_added_on_pos">Uspešno ste postavili artikle na poziciju!</string>
    <string name="counter_numbers">%1$d/%2$d</string>
    <string name="total_num_of_prod">Ukupno artikala: %1$d</string>
    <string name="total_num_of_inc">Ukupno prijema: %1$d</string>
    <string name="total_num_of_outgoing">Ukupno otprema: %1$d</string>
    <string name="pos_must_have_num_char">Barkod pozicije mora sadržati %1$d cifre</string>
    <string name="pos_barcode_not_set">Niste uneli barkod pozicije</string>
    <string name="product_not_selected_from_list">Niste odabrali proizvod iz liste!</string>
    <string name="qty_bad_format">Uneta neispravna vrednost za količinu!</string>
    <string name="qty_must_be_over_zero">Morate uneti količinu veću od 0!</string>
    <string name="qty_not_inserted">Niste uneli količinu!</string>
    <string name="sr_num_mandatory">Morate uneti serijski broj ili kliknite na dugme \"DODAJ BEZ SR.BR.\"</string>
    <string name="no_such_inc_on_fb">Odabrani prijem ne postoji na Firebase serveru. Kontaktirajte administratora.</string>
    <string name="added_qty_greater_than_defined">Količina na prijemu: %1$d\nUkupno dodata kol: %2$d\nDa li ipak želite da dodate?</string>
    <string name="delete_scanned_product_prompt">Da li želite da obrišete sve artikle koje ste skenirali/dodali?</string>
    <string name="error_deleting_all_from_temp_list">Došlo je do greške prilikom brisanju svih skeniranih/dodatih artikala. Pokušajte ponovo.</string>
    <string name="transport">Prevoz</string>
    <string name="incoming_overview">Pregled prijema</string>
    <string name="temp_list">Trenutna lista</string>
    <string name="incoming_production_lbl">Prijem - proizvodnja</string>
    <string name="send_incomings">Pošalji prijeme</string>
    <string name="outgoing_code">Šifra otpreme</string>
    <string name="outgoing_phase_one">Otprema FAZA 1</string>
    <string name="outgoing_phase_two">Otprema FAZA 2</string>
    <string name="position_for_preloading_lbl">Pozicija za predutovar</string>
    <string name="outgoing_preview">Pregled otpreme</string>
    <string name="outgoing_overview">Pregled otpreme</string>
    <string name="send_outgoing">Pošalji otpremu</string>
    <string name="incoming_transport">Transport</string>
    <string name="incoming_warehouse">Magacin</string>
    <string name="inventory_overview">Pregled popisa</string>
    <string name="inventory_send">Slanje popisa</string>
</resources>