<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/tempListProduction"
            android:icon="@drawable/ic_scan"
            android:title="@string/temp_list" />

    </group>

    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">

        <item
            android:id="@+id/incomingProductionOverview"
            android:icon="@drawable/ic_preview"
            android:title="@string/incoming_overview" />

    </group>

    <group
        android:id="@+id/menu_end"
        android:checkableBehavior="none">

        <item
            android:id="@+id/incomingProductionSend"
            android:icon="@drawable/ic_send"
            android:title="@string/send_incomings" />

    </group>
</menu>